--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -256,6 +256,7 @@
     <Compile Include="World\Battlefronts\Apocalypse\BattleFrontStatus.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\IApocCommunications.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\Loot\ILootBagBuilder.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\ILootDecider.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\Loot\IRandomGenerator.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\Loot\IRewardAssigner.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\Loot\IRewardSelector.cs" />
