--- a/Launcher/app.config
+++ b/Launcher/app.config
@@ -8,10 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
-    <add key="ServerTestIPAddress" value="144.202.22.11" />
-    <add key="ServerLocalIPAddress" value="127.0.0.1" />
-    <add key="ServerTestPort" value="8000" />
-    <add key="ServerLocalPort" value="8000" />
+    <add key="ServerPatchIPAddress" value="127.0.0.1" />
+    <add key="ServerPatchIPPort" value="8080" />
   </appSettings>
 
   <userSettings>
