--- a/WorldServer.Test/WorldServer.Test.csproj
+++ b/WorldServer.Test/WorldServer.Test.csproj
@@ -48,6 +48,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="InstanceHandlingTest.cs" />
     <Compile Include="LootDeciderTests.cs" />
     <Compile Include="CampaignObjectiveTest.cs" />
     <Compile Include="CombatManagerTest.cs" />
