Added config and fody to Launcher

--- a/Launcher/app.config
+++ b/Launcher/app.config
@@ -10,6 +10,7 @@
   <appSettings>
     <add key="ServerPatchIPAddress" value="127.0.0.1" />
     <add key="ServerPatchPort" value="8080" />
+    <add key="PatchDirectory" value=".." />
   </appSettings>
 
   <userSettings>
