--- a/Launcher/app.config
+++ b/Launcher/app.config
@@ -10,7 +10,7 @@
   <appSettings>
     <add key="ServerPatchIPAddress" value="app.warapoc.com" />
     <add key="ServerPatchPort" value="8080" />
-    <add key="PatchDirectory" value=".." />
+    <add key="PatchDirectory" value="..\.." />
   </appSettings>
 
   <userSettings>
