--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Database\World\Waypoint.cs" />
     <Compile Include="Database\World\World_Settings.cs" />
     <Compile Include="FastRandom.cs" />
+    <Compile Include="HonorCalculation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rpc\AccountMgr.cs" />
   </ItemGroup>
