MaxDamage removed. MinDamage renamed to BaseDamage. Removed old SQLs. DB change can be found in 17_ability_damage_heals_format_change.sql.

--- a/DbMigrationTool/DbMigrationTool.csproj
+++ b/DbMigrationTool/DbMigrationTool.csproj
@@ -85,122 +85,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="db-scripts\T4Progression.sql" />
-    <Content Include="db-scripts\V1_0_0_10__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_11__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_12__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_13__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_14__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_15__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_16__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_17__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_18__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_19__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_20__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_21__Raychangelog.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_22__baseAccounts.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_23__FOOT.sql" />
-    <Content Include="db-scripts\V1_0_0_24__AddColItemSets.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_25__AddAutoColItemSets.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_26__IncreaseCommentInItemSets.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_27__raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_28__raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_29__raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_30__raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_31__raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_32__raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_33__raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_34__Raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_35__Raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_36__npcvendoronslaugh.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_37__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_38__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_39__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_40__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_41__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_42__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_43__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_44__TyrantGearForVendors.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_45__TyrantGlyphsForVendors.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_46__Shmerrick.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_8__Raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="db-scripts\V1_0_0_9__Raychangelog.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Folder Include="db-scripts\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Evolve.1.8.0\build\net451\Evolve.targets" Condition="Exists('..\packages\Evolve.1.8.0\build\net451\Evolve.targets')" />
