--- a/WorldServer/packages.config
+++ b/WorldServer/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Evolve" version="1.8.0" targetFramework="net452" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="NLog" version="4.5.7" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
 </packages>
