--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -115,6 +115,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandLineOptions.cs" />
     <Compile Include="HttpUtil.cs" />
     <Compile Include="NetWork\Client.cs" />
     <Compile Include="ApocLauncher.cs">
@@ -197,6 +198,9 @@
     <Content Include="WAR.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommandLineParser">
+      <Version>2.3.0</Version>
+    </PackageReference>
     <PackageReference Include="nlog">
       <Version>4.5.10</Version>
     </PackageReference>
