Added config values to support differing launcher modes

--- a/Launcher/app.config
+++ b/Launcher/app.config
@@ -11,6 +11,10 @@
     <add key="ServerPatchIPAddress" value="app.warapoc.com" />
     <add key="ServerPatchPort" value="8080" />
     <add key="PatchDirectory" value="..\.." />
+    <add key="AutoLaunch" value="false"/>
+    <add key="PatchMYP" value="false"/>
+    <add key="PatchExe" value="false"/>
+    <add key="LaunchLocal" value="false"/>
   </appSettings>
 
   <userSettings>
