--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -318,6 +318,10 @@
     <Compile Include="World\Battlefronts\Apocalypse\ProximityEngine.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\VictoryPoint.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\VictoryPointProgress.cs" />
+    <Compile Include="World\Battlefronts\Keeps\BattleFrontKeep.cs" />
+    <Compile Include="World\Battlefronts\Keeps\HardPoint.cs" />
+    <Compile Include="World\Battlefronts\Keeps\KeepMessage.cs" />
+    <Compile Include="World\Battlefronts\Keeps\KeepRewardManager.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalToObjective.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalBase.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalToWarcamp.cs" />
