--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Database\World\Battlefront\Keep_Info.cs" />
     <Compile Include="Database\World\Battlefront\RVRPairing.cs" />
     <Compile Include="Database\World\Battlefront\PlayerContribution.cs" />
+    <Compile Include="Database\World\Battlefront\BattleFrontKeepStatus.cs" />
     <Compile Include="Database\World\Battlefront\ZoneLockSummary.cs" />
     <Compile Include="Database\World\Battlefront\RVRProgression.cs" />
     <Compile Include="Database\World\Battlefront\RVRZoneLockReward.cs" />
