--- a/WorldServer.Test/packages.config
+++ b/WorldServer.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Appccelerate.StateMachine" version="4.4.0" targetFramework="net452" />
   <package id="FakeItEasy" version="4.9.2" targetFramework="net452" />
   <package id="NLog" version="4.5.11" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net452" />
