--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -34,6 +34,7 @@
     <logger name="DeathLogger" minlevel="Trace" writeTo="deathLogToFile" />
     <logger name="RewardLogger" minlevel="Trace" writeTo="rewardLogToFile" />
     <logger name="BountyLogger" minlevel="Trace" writeTo="bountyLogToFile" />
+    <logger name="RVRProgressionLogger" minlevel="Trace" writeTo="battlefrontLogToFile" />
     <logger name="*" minlevel="Debug" writeTo="logfile" />
     <logger name="*" minlevel="Debug" writeTo="logconsole" />
   </rules>
