Added KeepTimer class.
Removed commented code no longer required.

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -331,6 +331,7 @@
     <Compile Include="World\Battlefronts\Keeps\IKeepCommunications.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepMessage.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepRewardManager.cs" />
+    <Compile Include="World\Battlefronts\Keeps\KeepTimer.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalToObjective.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalBase.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalToWarcamp.cs" />
