--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -282,6 +282,7 @@
     <Compile Include="World\Battlefronts\Apocalypse\BattlefieldObjective.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\KeepStateMachine.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\CampaignObjectiveStateMachine.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\SiegeManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\BountyException.cs" />
     <Compile Include="World\Battlefronts\Bounty\CharacterBounty.cs" />
     <Compile Include="World\Battlefronts\Bounty\ContributionManager.cs" />
