--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -282,6 +282,7 @@
     <Compile Include="World\Battlefronts\Apocalypse\BattlefieldObjective.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\KeepStateMachine.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\CampaignObjectiveStateMachine.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\PlayerRewardOptions.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\SiegeManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\BountyException.cs" />
     <Compile Include="World\Battlefronts\Bounty\CharacterBounty.cs" />
@@ -323,7 +324,6 @@
     <Compile Include="World\Battlefronts\Apocalypse\UpperTierCampaignManager.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\IApocBattleFront.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\ApocCommunications.cs" />
-    <Compile Include="World\Battlefronts\Apocalypse\ProximityEngine.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\VictoryPoint.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\VictoryPointProgress.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepCommunications.cs" />
@@ -337,8 +337,6 @@
     <Compile Include="World\Battlefronts\Objectives\PortalBase.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalToWarcamp.cs" />
     <Compile Include="World\Battlefronts\Objectives\StateFlags.cs" />
-    <Compile Include="World\Battlefronts\RationTracker.cs" />
-    <Compile Include="World\Battlefronts\Legacy\BattlefrontObjective.cs" />
     <Compile Include="World\Abilities\Buffs\BuffInterface.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepDoor.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepNpcCreature.cs" />
