Added keep npc order, dest waypoints

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -336,6 +336,7 @@
     <Compile Include="World\Battlefronts\Keeps\BattleFrontKeep.cs" />
     <Compile Include="World\Battlefronts\Keeps\HardPoint.cs" />
     <Compile Include="World\Battlefronts\Keeps\IKeepCommunications.cs" />
+    <Compile Include="World\Battlefronts\Keeps\KeepCreature.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepMessage.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepRewardManager.cs" />
     <Compile Include="World\Battlefronts\Keeps\KeepTimer.cs" />
